# basket-debate

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.dvc/: config
data/: meal_components.json  meal_components_extended.json  scenarios.json  tag_rules.json  tag_rules_extended.json
data/processed/: products.db.dvc
data/raw/: russian_supermarket_prices.csv.dvc
data/templates/: mock.json
logs/compatibility_agent/MaskablePPO_1/: events.out.tfevents.1770197545.MacBook-Pro-Polina.local.51552.0
logs/compatibility_agent/MaskablePPO_2/: events.out.tfevents.1770198447.MacBook-Pro-Polina.local.53679.0
logs/compatibility_agent/MaskablePPO_3/: events.out.tfevents.1770198930.MacBook-Pro-Polina.local.54958.0
logs/compatibility_agent/MaskablePPO_4/: events.out.tfevents.1770200437.MacBook-Pro-Polina.local.57562.0
logs/ppo_basket/PPO_11/: events.out.tfevents.1770122841.MacBook-Pro-Polina.local.34726.0
logs/ppo_basket/PPO_12/: events.out.tfevents.1770122953.MacBook-Pro-Polina.local.35079.0
logs/ppo_basket/PPO_13/: events.out.tfevents.1770123150.MacBook-Pro-Polina.local.35926.0
logs/ppo_basket/PPO_14/: events.out.tfevents.1770123373.MacBook-Pro-Polina.local.36823.0
logs/ppo_basket/PPO_15/: events.out.tfevents.1770124009.MacBook-Pro-Polina.local.38472.0
logs/ppo_masked/MaskablePPO_1/: events.out.tfevents.1770124581.MacBook-Pro-Polina.local.40900.0
logs/ppo_masked/MaskablePPO_2/: events.out.tfevents.1770125104.MacBook-Pro-Polina.local.42717.0
src/: process_dataset.py
src/agent/: compatibility_env.py  env.py  masked_agent.py  multi_action_env.py  multi_action_masked_env.py
src/agent/budget/: agent.py
src/agent/compatibility/: ___init___.py  agent.py  embeddings_builder.py  product_searcher.py  scenario_matcher.py  scorer.py
src/agents/budget/: agent.py
src/backend/: agent_pipeline.py  app.py
src/data/: products.db
src/frontend/: package-lock.json  package.json  vite.config.js
src/nlp/: function_definitions.py  llm_parser.py
src/rl/: inspect_masks.py  train_compatibility.py  train_masked.py  train_multi_action.py  train_shared_ppo.py  train_single_agent.py
src/scripts/: add_fresh_products.py  cleanup_bad_products.py  otlad.py  prepare_db.py
tests/: test_budget_agent.py
(+13 files in other folders)
