[project]
name = "basket-debate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "dvc>=3.66.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "gymnasium>=1.2.3",
    "numpy>=2.4.1",
    "pettingzoo>=1.25.0",
    "redis>=7.1.0",
    "sentence-transformers>=5.2.0",
    "supersuit>=3.10.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
]
