[project]
name = "basket-debate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "dvc>=3.66.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "gymnasium>=1.2.3",
    "kaggle>=1.8.3",
    "numpy>=2.4.1",
    "openai>=2.16.0",
    "pandas>=2.3.3",
    "pettingzoo>=1.25.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sb3-contrib>=2.7.1",
    "sentence-transformers>=5.2.0",
    "stable-baselines3>=2.7.1",
    "supersuit>=3.10.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
]
