[project]
name = "basket-debate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "dvc>=3.66.1",
    "dvc-s3>=3.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.0",
    "gymnasium>=1.2.3",
    "kaggle>=1.8.3",
    "numpy>=2.4.1",
    "openai>=2.16.0",
    "pandas>=2.3.3",
    "pettingzoo>=1.25.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sb3-contrib>=2.7.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# настройки для pytest
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"